--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -10,11 +10,11 @@ $base-line-height: 1.5 !default;
 
 $spacing-unit:     30px !default;
 
-$text-color:       #111 !default;
-$background-color: #fdfdfd !default;
-$brand-color:      #2a7ae2 !default;
+$text-color:       #ddd !default;
+$background-color: #222 !default;
+$brand-color:      #1a9aeb !default;
 
-$grey-color:       #828282 !default;
+$grey-color:       #ddd !default;
 $grey-color-light: lighten($grey-color, 40%) !default;
 $grey-color-dark:  darken($grey-color, 25%) !default;
 
@@ -47,3 +47,11 @@ $on-laptop:        800px !default;
   "minima/layout",
   "minima/syntax-highlighting"
 ;
+.post-list > li{margin-bottom:5px;}
+h2{margin-bottom:5px;}
+
+pre{
+  background-color: $background-color;
+  color:$text-color;
+
+}
