more work on pivot post

--- a/_sass/gavcustom.scss
+++ b/_sass/gavcustom.scss
@@ -57,6 +57,6 @@ pre{
 }
 
 th{
-  text-align: left;
+  text-align: left; padding-right:10px;
 }
-table{margin-bottom:15px;}
+table{margin-bottom:15px;;}
