--- a/_sass/gavcustom.scss
+++ b/_sass/gavcustom.scss
@@ -60,3 +60,29 @@ th{
   text-align: left; padding-right:10px;
 }
 table{margin-bottom:15px;;}
+
+ td { padding-right:25px;padding-left:5px; }
+ td:first-child{ padding-left:0px;}
+ td:last-child { padding-right:0px; }
+
+
+table {
+border:none;
+border-collapse: collapse;
+}
+
+table td {
+border-left: 1px solid;
+border-right: 1px solid;
+border-bottom: 1px solid;
+}
+
+table td:first-child {
+border-left: none;
+}
+
+table td:last-child {
+border-right: none;
+}
+
+//table tr:first-child td{border-left-style:none;border-right-style:none;}
