--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,12 @@
       <div class="content col-md-2 hidden-md-down sidebar">
         <h2>Top Posts</h2>
         <ul>
-          <li/><a href="https://gavindraper.com/2012/02/18/sql-server-isolation-levels-by-example/">SQL Server Isolation Levels Explained</a>
+          <li/><a href="https://gavindraper.com/2012/02/18/sql-server-isolation-levels-by-example/">Isolation Levels Explained</a>
+          <li/><a href="https://gavindraper.com/2012/05/02/sql-server-indexed-views-explained/">Indexed Views Explained</a>
+          <li/><a href="https://gavindraper.com/2017/06/06/sql-server-2016-tsql-whats-new/">SQL Server 2016 What's New With TSQL</a>
+          <li/><a href="https://gavindraper.com/2012/06/03/sql-server-service-broker-explained/">SQL Server Service Broker Explained</a>
+          <li/><a href="https://gavindraper.com/2017/05/31/sql-server-parameter-sniffing/">Parameter Sniffing In Depth</a>
+          <li/><a href="https://gavindraper.com/2017/05/16/clustered-and-nonclustered-indexes/">Clustered & NonClustered Indexes Explained</a>
         </ul>
         {% include adsense-vertical.html %}
         <h2>Recent Posts</h2>
