--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -13,7 +13,7 @@ layout: default
    <!-- here add you post markup -->
    <h1><a href="{{ post.url }}">{{ post.title }}</a></h1>
    <p class="author">
-    <span class="date">{{post.date}}</span>
+    <span class="date">{{ post.date | date: '%Y' }}</span>
   </p>
   <div class="content">
     {{ post.content }}
