--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -13,7 +13,10 @@ layout: default
    <!-- here add you post markup -->
    <h1><a href="{{ post.url }}">{{ post.title }}</a></h1>
    <p class="author">
-    <span class="date">{{ post.date | date: '%Y' }}</span>
+    <span class="date">      <time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">
+        {% assign date_format = site.minima.date_format | default: "%b %-d, %Y" %}
+        {{ page.date | date: date_format }}
+      </time></span>
   </p>
   <div class="content">
     {{ post.content }}
