--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -13,9 +13,8 @@ layout: default
    <!-- here add you post markup -->
    <h1><a href="{{ post.url }}">{{ post.title }}</a></h1>
    <p class="author">
-    <span class="date">      
-        {% assign date_format = site.minima.date_format | default: "%b %-d, %Y" %}
-        {{ page.date | date: date_format }}
+    <span class="date">              
+        {{ page.date | date:  "%b %-d, %Y" }}
       </span>
   </p>
   <div class="content">
