--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -14,7 +14,7 @@ layout: default
    <h1><a href="{{ post.url }}">{{ post.title }}</a></h1>
    <p class="author">
     <span class="date">              
-        {{ page.date | date:  "%b %-d, %Y" }}
+        {{ post.date | date:  "%b %-d, %Y" }}
       </span>
   </p>
   <div class="content">
