--- a/_includes/adsense.html
+++ b/_includes/adsense.html
@@ -1,7 +1,10 @@
 <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- responsive -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-3340370932015278"
+     data-ad-slot="3710942441"
+     data-ad-format="auto"></ins>
 <script>
-     (adsbygoogle = window.adsbygoogle || []).push({
-          google_ad_client: "ca-pub-3340370932015278",
-          enable_page_level_ads: true
-     });
+(adsbygoogle = window.adsbygoogle || []).push({});
 </script>
