--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
           <li/><a href="https://gavindraper.com/2017/05/31/sql-server-parameter-sniffing/">Parameter Sniffing In Depth</a>
           <li/><a href="https://gavindraper.com/2017/05/16/clustered-and-nonclustered-indexes/">Clustered & NonClustered Indexes Explained</a>
         </ul>
-        {% include adsense-vertical.html %}
+        <!--{% include adsense-vertical.html %}-->
         <h2>Recent Posts</h2>
         {%for post in site.posts limit:5 %} {% unless post.next %}
         <ul class="this">
@@ -36,7 +36,7 @@
             <a href="{{ post.url }}">{{ post.title }}</a></li>
           {% endfor %}
         </ul>
-        {% include adsense-vertical.html %}
+        <!--{% include adsense-vertical.html %}-->
       </div>
     </div>
   </div>
