--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 <article class="post" itemscope itemtype="http://schema.org/BlogPosting" style="margin-top:7px">
-{% include adsense.html %}
+<!--{% include adsense.html %}-->
   <header class="post-header">
     <h1 class="post-title" itemprop="name headline">{{ page.title | escape }}</h1>
     <p class="post-meta">
@@ -25,7 +25,7 @@ layout: default
     <a href="https://plus.google.com/share?url={{ site.url }}{{ page.url }}" rel="nofollow" target="_blank" title="Share on Google+">Google+</a>
   </div>
 
-{% include adsense.html %}
+<!--{% include adsense.html %}-->
   {% if site.disqus.shortname %}
     {% include disqus_comments.html %}
   {% endif %}
