Revised sidebar and ETL memory post

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,10 @@
 
   <div id="wrap" class="container-fluid">
     <div class="row">
-      <div class="content col-md-8 col-md-offset-2">
+        <div class="content col-md-2 hidden-md-down sidebar">
+          <img src="/content/images/profile.jpg"/><span style="font-size:9pt;line-height:0.8em;">Software Developer/Dev DBA. Often hyper, often talking rubbish pick and choose what to take away from this blog....</span>
+        </div>
+      <div class="content col-md-8">
         {{ content }}
       </div>
       <div class="content col-md-2 hidden-md-down sidebar">
