--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,6 +11,16 @@
     <div class="row">
         <div class="content col-md-2 hidden-md-down sidebar">
           <img src="/content/images/profile.jpg"/><span style="font-size:9pt;line-height:0.8em;">Software Developer/Dev DBA. Often hyper, often talking rubbish pick and choose what to take away from this blog....</span>
+          <div style="font-size:16pt;margin-top:20px;">Tags</div>
+          {% for tag in site.tags %}
+          <!-- Here's a hack to generate a "tag cloud" where the size of
+          the word is directly proportional to the number of posts with
+          that tag. -->
+          <a href="/tags/{{ tag[0] }}/">
+              {{ tag[0] }}
+          </a> | 
+          {% endfor %}
+
         </div>
       <div class="content col-md-8">
         {{ content }}
