--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -17,6 +17,15 @@ layout: default
   <div class="post-content" itemprop="articleBody">
     {{ content }}
   </div>
+
+  <small>
+      {% for tag in page.tags %}
+      <a href="/tags/{{ tag }}/">{{ tag }}</a>
+      {% endfor %}
+  </small>
+
+
+  
   <div class="share-page" style="margin-bottom:5px">
     Share this on &rarr;
     <a href="https://twitter.com/intent/tweet?text={{ page.title }}&url={{ site.url }}{{ page.url }}&via={{ site.twitter_username }}&related={{ site.twitter_username }}" rel="nofollow" target="_blank" title="Share on Twitter">Twitter</a>    
