--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
   <div id="wrap" class="container-fluid">
     <div class="row">
         <div class="content col-md-2 hidden-md-down sidebar">
-          <img src="/content/images/profile.jpg"/><span style="font-size:9pt;line-height:0.8em;">Software Developer/Dev DBA. Often hyper, often talking rubbish pick and choose what to take away from this blog.... Want to get in touch? My social network profiles are listed above.</span>
+          <img src="/content/images/profile.jpg"/><span style="font-size:9pt;line-height:0.8em;">Software Developer/Dev DBA. Often hyper, often talking rubbish. Pick and choose what to take away from this blog.... Want to get in touch? My social network profiles are listed above.</span>
           <div style="font-size:16pt;margin-top:20px;">Tags</div>
           {% for tag in site.tags %}
           <!-- Here's a hack to generate a "tag cloud" where the size of
