--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,11 +3,12 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>{% if page.title %}{{ page.title | escape }} - Gavin Draper | SQL Server
+  <title>{% if page.title %}{{ page.title | escape }} | Gavin Draper - SQL Server
     Blog{% else %}{{ site.title | escape }}{% endif %}</title>
   <meta name="description"
     content="{{ page.excerpt | default: site.description | strip_html | normalize_whitespace | truncate: 160 | escape }}">
-
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:site" content="@gavdraper" />
   <link rel="stylesheet" href="{{ "/assets/main.css" | relative_url }}">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | absolute_url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title | escape }}"
