--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -136,6 +136,24 @@
 	{{ site.data.settings.advanced_settings.footer_js }}
 	{% endif %}
 
+	<script>
+		$(function () {
+			var codeBlocks = $("figure.highlight");
+			//Inject TitleBar
+			for (var i = 0; i < codeBlocks.length; i++) {
+				codeBlocks[i].innerHTML = `
+					<div class="titleBar">
+						<span class="greenCircle">&nbsp;</span>
+						<span class="orangeCircle">&nbsp;</span>
+						<span class="redCircle">&nbsp;</span>
+					</div>
+				
+				`+ codeBlocks[i].innerHTML;
+			}
+			//Round Corners
+			codeBlocks.addClass("roundCodeCorners");
+		});
+	</script>
 
 </body>
 
