--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -147,11 +147,13 @@
 						<span class="orangeCircle">&nbsp;</span>
 						<span class="redCircle">&nbsp;</span>
 					</div>
-				
-				`+ codeBlocks[i].innerHTML;
+					<div class="codez">
+				`+ codeBlocks[i].innerHTML + "</div>";
 			}
 			//Round Corners
 			codeBlocks.addClass("roundCodeCorners");
+
+
 		});
 	</script>
 
