--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -137,24 +137,23 @@
 	{% endif %}
 
 	<script>
-		$(function () {
-			var codeBlocks = $("figure.highlight");
-			//Inject TitleBar
-			for (var i = 0; i < codeBlocks.length; i++) {
-				codeBlocks[i].innerHTML = `
-					<div class="titleBar">
-						<span class="greenCircle">&nbsp;</span>
-						<span class="orangeCircle">&nbsp;</span>
-						<span class="redCircle">&nbsp;</span>
-					</div>
-					<div class="codez">
-				`+ codeBlocks[i].innerHTML + "</div>";
-			}
-			//Round Corners
-			codeBlocks.addClass("roundCodeCorners");
+		// $(function () {
+		// 	var codeBlocks = $("figure.highlight");
+		// 	//Inject TitleBar
+		// 	for (var i = 0; i < codeBlocks.length; i++) {
+		// 		codeBlocks[i].innerHTML = `
+		// 			<div class="titleBar">
+		// 				<span class="greenCircle">&nbsp;</span>
+		// 				<span class="orangeCircle">&nbsp;</span>
+		// 				<span class="redCircle">&nbsp;</span>
+		// 			</div>
+		// 			<div class="codez">
+		// 		`+ codeBlocks[i].innerHTML + "</div>";
+		// 	}
+		// 	//Round Corners
+		// 	codeBlocks.addClass("roundCodeCorners");
 
-
-		});
+		// });
 	</script>
 
 </body>
