--- a/css/style.scss
+++ b/css/style.scss
@@ -153,12 +153,14 @@ $grid-spacing: {{ site.data.settings.post_settings.grid_spacing }}px;
      padding-left:5px !important;
      padding-right:5px !important;
      padding-bottom:5px !important;
+     overflow:hidden;
 }
 
 .codez
 {
     padding:10px;
     background-color:#272822;
+    overflow-x:auto;
 }
 
 
